--- a/meteoric_scale.html
+++ b/meteoric_scale.html
@@ -3,6 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="a simple weight tracking app">
   <meta name="author" content="">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
 </head>
 
 <body>
@@ -66,38 +67,49 @@
 </template>
 
 <template name="new_measurement">
-  <form role="form" class="form-inline">
-    <div class="form-group">
-      <input type="text" class="weight form-control" placeholder="206" />
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <h3 class="panel-title"><i class="fa fa-edit"></i> Add a new measurement</h3>
     </div>
-    <button class="btn btn-default save">Save</button>
-    <span class="help-block">Please enter weight in pounds (lbs).</span>
-  </form>
+    <div class="panel-body">
+      <form role="form" class="form-inline">
+        <div class="form-group">
+          <input type="text" class="weight form-control" placeholder="206" />
+        </div>
+        <button class="btn btn-default save">Save</button>
+        <span class="help-block">Please enter weight in pounds (lbs).</span>
+      </form>
+    </div>
+  </div>
 </template>
 
 <template name="measurements_list">
-  <br>
-  <div>
-    <table class="table table-bordered">
-      {{#each measurements}}
-        <tr>
-          <td>{{weight}} lbs</td>
-          <td>{{pretty_date_format}}</td>
-          <td><button class="btn btn-danger remove_measurement">Delete</button></td>
-        </tr>
-      {{/each}}
-    </table>
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <h3 class="panel-title"><i class="fa fa-table"></i> Measurements</h3>
+    </div>
+    <div class="panel-body">
+      <table class="table table-bordered">
+        {{#each measurements}}
+          <tr>
+            <td>{{weight}} lbs</td>
+            <td>{{pretty_date_format}}</td>
+            <td><button class="btn btn-danger remove_measurement">Delete</button></td>
+          </tr>
+        {{/each}}
+      </table>
+    </div>
   </div>
 </template>
 
 <template name="graph">
   <div class="panel panel-info">
     <div class="panel-heading">
-      <h3 class="panel-title">Graph</h3>
+      <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Graph</h3>
     </div>
     <div class="panel-body">
       <div id="my_weight_chart"></div>
-      the fancy graph goes here
+      <div>the fancy graph goes here</div>
     </div>
   </div>
 </template>
