update delete to times

--- a/meteoric_scale.html
+++ b/meteoric_scale.html
@@ -94,7 +94,11 @@
           <tr>
             <td>{{weight}} lbs</td>
             <td>{{pretty_date_format}}</td>
-            <td><button class="btn btn-danger btn-xs remove_measurement">Delete</button></td>
+            <td>
+              <button class="btn btn-danger btn-xs remove_measurement">
+                &times;
+              </button>
+            </td>
           </tr>
         {{/each}}
       </table>
