--- a/meteoric_scale.html
+++ b/meteoric_scale.html
@@ -24,6 +24,9 @@
           <!-- <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li> -->
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>{{loginButtons align="right"}}</li>
+        </ul>
       </div><!--/.nav-collapse -->
     </div>
   </div>
